# GuitarMidi-LV2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  guitarmidi-trainingplugin.ttl  guitarmidi.ttl
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
assets/trainingdata/chords/: session_NNTranscription-1-t1.mid
assets/trainingdata/chromatic run/: session_NNTranscription-1-t1.mid
python/: guitarset.ipynb  manifest-generator.py  midi.ipynb
python/neuralnetmodelling/: common.py  copy_trainingsubset.sh  copy_trainingsubset_acoustic.sh  copy_trainingsubset_electric.sh  copy_trainingsubset_electric_testset.sh  copy_trainingsubset_small.sh  create_trainingsubset.ipynb  filters.ipynb  fretboard.py  fretboardnonredundant.py  guitarmidi.tflite  guitarmidi.weights.h5  guitarset_dataprep.ipynb  model-1d.py  model.py  model1d.py  model_summary.txt  output_notebook.ipynb  savecompletemodel.ipynb  saveproductionmodel.ipynb  synthtab_dataprep-nofilter.ipynb  synthtab_dataprep.ipynb  tensorboard.ipynb  tensorboard_viz.py  tensorflow_tflite_converter.ipynb  test-model.ipynb  training-with-prefiltering-singletfrecord-datapost-filtering.ipynb  training-with-prefiltering-singletfrecord.ipynb  training-with-prefiltering.ipynb  training.ipynb  training_dataprep.ipynb  training_dataprep_audio.ipynb  training_dataprep_midi.ipynb  usedrecords-acoustic.txt  usedrecords-electric.txt  usedrecords.txt  usedrecords_small.txt  visualize_data.ipynb  visualize_metrics.ipynb  write_tfrecord_parallel.py
python/neuralnetmodelling/.ipynb_checkpoints/: create_trainingsubset-checkpoint.ipynb  filters-checkpoint.ipynb  training-checkpoint.ipynb  training-with-prefiltering-singletfrecord-checkpoint.ipynb  training_dataprep_audio-checkpoint.ipynb  training_dataprep_midi-checkpoint.ipynb
python/neuralnetmodelling/data_slices/12 Stones - Crash - gp4__1 - Electric Clean Guitar__midi/0s_to_120s/input/: data.tfrecord
python/neuralnetmodelling/logs/fit/20251104-130631/train/: events.out.tfevents.1762257991.rightnow.517000.0.v2
python/neuralnetmodelling/logs/fit/20251104-130631/validation/: events.out.tfevents.1762258282.rightnow.517000.1.v2
python/neuralnetmodelling/logs/fit/20251104-132240/train/: events.out.tfevents.1762258960.rightnow.527570.0.v2
python/neuralnetmodelling/logs/fit/20251104-132240/validation/: events.out.tfevents.1762259249.rightnow.527570.1.v2
python/neuralnetmodelling/logs/fit/20251104-135820/train/: events.out.tfevents.1762261100.rightnow.545077.0.v2
python/neuralnetmodelling/logs/fit/20251104-135820/validation/: events.out.tfevents.1762261396.rightnow.545077.1.v2
python/neuralnetmodelling/logs/inference/20251105-065700/: events.out.tfevents.1762322220.rightnow.13591.11.v2
python/neuralnetmodelling/logs/inference/20251105-070536/: events.out.tfevents.1762322736.rightnow.13591.12.v2
python/neuralnetmodelling/logs/inference/20251105-070556/: events.out.tfevents.1762322756.rightnow.33000.0.v2
python/neuralnetmodelling/logs/model_architecture/20251104-165452/: events.out.tfevents.1762271692.rightnow.625621.0.v2
python/neuralnetmodelling/logs/model_architecture/20251105-061020/: events.out.tfevents.1762319420.rightnow.8028.0.v2  model_summary.txt
python/neuralnetmodelling/model_dir/: README.md  fingerprint.pb  guitarmidi-model-and-weights.json  guitarmidi-model-and-weights.keras  quantized_model.tflite  saved_model.pb
python/neuralnetmodelling/model_dir/variables/: variables.data-00000-of-00001  variables.index
python/neuralnetmodelling/training_subset/: note_histogram.csv
python/neuralnetmodelling/training_subset-createsubset-git8588ad8d21a47632ed70581904be4159498938e6/: filtered_data.tfrecord
python/neuralnetmodelling/training_subset-small/: note_histogram.csv
python/neuralnetmodelling/training_subset/training_subset_electric/: note_histogram.csv
python/neuralnetmodelling/training_subset_acoustic/: note_histogram.csv
src/: CMakeLists.txt  filter.cpp  filterbank.cpp  fret.cpp  fretboard.cpp  fretboardrepresentation.cpp  guitarmidi.cpp  guitarnote.cpp  guitarstring.cpp  harmonicgroup.cpp  midioutput.cpp  modelinferencer.cpp  noteclassifier.cpp  noteinferencer.cpp
src/include/: common.hpp  config.hpp.in  filter.hpp  filterbank.hpp  fret.hpp  fretboard.hpp  fretboardrepresentation.hpp  guitarnote.hpp  guitarstring.hpp  harmonicgroup.hpp  logging.hpp  midioutput.hpp  modelinferencer.hpp  noteclassifier.hpp  noteinferencer.hpp
src/testprogram_frugal/: CMakeLists.txt  main.cpp
src/tflite_custom_op_example/: CMakeLists.txt  minimal.cc
src/tflite_custom_op_example/custom_op/: PartitionedAvgPool.cc  PartitionedAvgPool.h
src/tflite_custom_op_example/src/: main.cc
vibe-reserach/: Neural Network Architectures for Polyphonic Guitar Pitch Detection.md  dataset-survey.md  gemini.md  httpsgithub.comgeraldmwangiGuitarMidi-LV2.md
